implemented search bar in the coffee shops component

--- a/src/CoffeeShopsIndex.scoped.scss
+++ b/src/CoffeeShopsIndex.scoped.scss
@@ -15,3 +15,10 @@ p {
 .child-row:hover {
   background-color: rgb(223, 221, 221);
 }
+
+.search {
+  padding-left: 28px;
+  margin-bottom: 20px;
+  margin-top: 30px;
+  max-width: 400px;
+}
