--- a/src/CoffeeShopsIndex.scoped.scss
+++ b/src/CoffeeShopsIndex.scoped.scss
@@ -13,7 +13,7 @@ p {
 }
 
 .child-row:hover {
-  background-color: rgb(223, 221, 221);
+  background-color: rgb(243,237,233);
 }
 
 .search {
@@ -22,3 +22,4 @@ p {
   margin-top: 30px;
   max-width: 400px;
 }
+
