added inputs to search city and state

--- a/src/CoffeeShopsIndex.scoped.scss
+++ b/src/CoffeeShopsIndex.scoped.scss
@@ -20,8 +20,20 @@ p {
   padding-left: 28px;
   margin-bottom: 20px;
   margin-top: 30px;
-  max-width: 400px;
+  max-width: 427px;
 }
+
+.location-search {
+  padding-left: 28px;
+  margin-bottom: 20px;
+  margin-top: 30px;
+}
+
+.input {
+  max-width: 200px;
+}
+
+
 
 .btn {
   font-size: 0.8rem !important;
