added google map functionality

--- a/src/Signup.scoped.scss
+++ b/src/Signup.scoped.scss
@@ -1,3 +1,10 @@
+.signup {
+  background-image: url("./assets/shutterstock_177063779.jpg");
+  background-size: cover;
+  color: white;
+  padding: 20px;
+}
+
 .form-group {
   margin-bottom: 10px;
 }
