--- a/src/Modal.scoped.scss
+++ b/src/Modal.scoped.scss
@@ -11,8 +11,6 @@
 
 .modal-main {
   position:fixed;
-  background: url("./assets/shutterstock_177063779.jpg");
-  color: white;
   width: 400px;
   max-width: 100%;
   height: auto;
@@ -20,12 +18,12 @@
   left:50%;
   transform: translate(-50%,-50%);
   padding: 1em;
+  overflow-y: scroll;
 }
 
 .modal-main button.close {
   font-size: 1.5em;
   background: none;
-  color: white;
   border: none;
   position: absolute;
   top: 0em; 
