added styling to add scroll to left column

--- a/src/CoffeeShopsIndex.scoped.scss
+++ b/src/CoffeeShopsIndex.scoped.scss
@@ -35,3 +35,10 @@ p {
 .btn {
   font-size: 0.8rem !important;
 }
+
+// Left Column Scroll
+.left{
+  height: 100vh;
+  width: 105%;
+  overflow: scroll;
+}
