--- a/src/Login.scoped.scss
+++ b/src/Login.scoped.scss
@@ -4,6 +4,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background: black;
   background-image: url("./assets/background-option3.jpg");
   background-size: cover;
   background-position: center center;
