--- a/src/Signup.scoped.scss
+++ b/src/Signup.scoped.scss
@@ -16,6 +16,10 @@
   max-width: 90% !important;
 }
 
+input:-webkit-autofill {
+  -webkit-box-shadow: inset 0 0 0px 9999px white;
+}
+
 .signup-submit {
   padding: 1px;
   width: 30%;
