updated search button styling

--- a/src/CoffeeShopsIndex.scoped.scss
+++ b/src/CoffeeShopsIndex.scoped.scss
@@ -6,12 +6,14 @@ form {
 }
 
 .form-input {
-  max-width: 400px;
+  max-width: 300px;
 }
 
 .search-button {
   max-width: 20px;
   max-height: 48px;
+  padding: 10px;
+  margin: 10px;
 }
 
 .fa-magnifying-glass:hover {
