--- a/src/Login.scoped.scss
+++ b/src/Login.scoped.scss
@@ -5,7 +5,7 @@
   justify-content: center;
   align-items: center;
   background: black;
-  background-image: url("./assets/background-option3.jpg");
+  background-image: url("./assets/background.jpg");
   background-size: cover;
   background-position: center center;
   color: white;
