added styling to account page and coffee index page

--- a/src/Account.scoped.scss
+++ b/src/Account.scoped.scss
@@ -1,6 +1,6 @@
 .account-show {
   height: 100vh;
-  background-color: red;
+  background-color: black;
   background-image: url("./assets/coffee-beans.jpg");
   background-position: center center;
   background-size: cover;
